# Colorzie

./: CMakeLists.txt  README.md
Colorzie/: Colorzie.cbp  Colorzie.depend  Colorzie.exe - Shortcut.lnk  Colorzie.layout  main.cpp
Colorzie/maps/: map1.txt  map10.txt  map11.txt  map12.txt  map3.txt  map4.txt  map5.txt  map6.txt  map7.txt
